--- a/src/css/app.css
+++ b/src/css/app.css
@@ -147,6 +147,43 @@ page header .new_button {
   width: 100px;
   cursor: pointer;
 }
+page headerinput {
+  padding: 0px 0px 20px 20px;
+  display: grid;
+  grid-template-columns: 0.5fr 30% 0.5fr 30% 1fr;
+  grid-template-rows: auto;
+}
+page headerinput .input_name{
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+page headerinput .left_input {
+  border-right: none;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+
+page headerinput .right_input {
+  border-left: none;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+
+page headerinput button {
+  all: unset;
+  height: 40px;
+  background-color: #38f3f3;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  z-index: -1;
+  cursor: pointer;
+}
+
 page content {
   grid-area: container_content;
   padding: 20px;
