--- a/src/css/app.css
+++ b/src/css/app.css
@@ -186,6 +186,13 @@ page headerinput button {
   cursor: pointer;
 }
 
+page .header-switch {
+  padding: 0px 0px 20px 20px;
+  display: grid;
+  grid-template-columns: 0.5fr 10% 10% 10% 30% 1.5fr;
+  grid-template-rows: auto;
+}
+
 page content {
   grid-area: container_content;
   padding: 20px;
@@ -212,6 +219,29 @@ page content table tbody tr:nth-child(2n) {
 page content table tbody tr td {
   text-align: left;
   padding: 15px;
+}
+
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
+
+.pagination .hidden{
+  visibility: hidden;
 }
 
 /*# sourceMappingURL=app.css.map */
