--- a/src/css/all.css
+++ b/src/css/all.css
@@ -4,17 +4,17 @@ body {
   margin: 0;
 }
 
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
 container {
   width: 100%;
   min-width: 60%;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin-left:20%;
 }
 @media screen and (max-width: 1920px) {
   container {
@@ -450,200 +450,3 @@ group .span_11 {
 group .span_12 {
   flex: 12;
 }
-
-input,
-dropdown,
-datepicker {
-  display: block;
-  width: 280px;
-  height: 21px;
-  padding: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: white;
-  font-size: 18px;
-  border-radius: 7px;
-  color: #666666;
-}
-input:focus,
-dropdown:focus,
-datepicker:focus {
-  box-shadow: 0 0 1pt 1pt #ca44ff;
-  outline: none;
-}
-
-dropdown.animation li:hover {
-  background: linear-gradient(120deg, #ca44ff 50%, #b700ff 51%, #ca44ff 53%, #b700ff, #ca44ff 54%);
-  background-repeat: no-repeat;
-  background-size: 300% 100%;
-  animation: dropdown_li 2s ease-in infinite;
-}
-@keyframes dropdown_li {
-  0% {
-    background-position-x: 0;
-  }
-  40% {
-    background-position-x: 100%;
-  }
-  100% {
-    background-position-x: 100%;
-  }
-}
-dropdown dropdown-box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-dropdown dropdown-box input {
-  all: unset;
-  flex: 1;
-  height: 100%;
-}
-dropdown dropdown-box input::placeholder {
-  color: #969696;
-}
-dropdown dropdown-box i {
-  font-size: 16px;
-}
-dropdown dropdown-list {
-  display: none;
-  flex-direction: column;
-  position: relative;
-  top: 20px;
-  left: -10px;
-  box-shadow: 0 0 1pt 1pt rgba(0, 0, 0, 0.171);
-  width: inherit;
-  border-radius: 7px;
-  background-color: whitesmoke;
-}
-dropdown dropdown-list.show {
-  display: flex;
-}
-dropdown dropdown-list li {
-  display: flex;
-  align-items: center;
-  height: 45px;
-  padding: 10px;
-}
-dropdown dropdown-list li:hover {
-  background-color: #ca44ff;
-  color: white;
-}
-dropdown dropdown-list li:first-child {
-  border-radius: 7px 7px 0 0;
-}
-dropdown dropdown-list li:last-child {
-  border-radius: 0 0 7px 7px;
-}
-
-datepicker datepicker-box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-datepicker datepicker-box input {
-  all: unset;
-  flex: 1;
-  height: 100%;
-}
-datepicker datepicker-box input::placeholder {
-  color: #969696;
-}
-datepicker datepicker-box i {
-  font-size: 16px;
-}
-datepicker calendar {
-  display: none;
-  flex-direction: column;
-  position: relative;
-  top: 20px;
-  left: -10px;
-  box-shadow: 0 0 1pt 1pt rgba(0, 0, 0, 0.171);
-  width: 280px;
-  background-color: white;
-}
-datepicker calendar.show {
-  display: flex;
-}
-datepicker calendar div {
-  display: flex;
-}
-datepicker calendar div button {
-  all: unset;
-  display: flex;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-}
-datepicker calendar div button.display {
-  flex: 1;
-}
-datepicker calendar div button:hover {
-  background-color: #e7e7e7;
-}
-datepicker calendar ul {
-  all: unset;
-  display: flex;
-  flex-wrap: wrap;
-}
-datepicker calendar ul li,
-datepicker calendar ul span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-}
-datepicker calendar ul li {
-  cursor: pointer;
-}
-datepicker calendar ul li.selected {
-  background-color: #d55dfa !important;
-  color: white;
-}
-datepicker calendar ul li.disabled {
-  color: lightgray;
-}
-datepicker calendar ul li:hover {
-  background-color: #e7e7e7;
-}
-
-.theme.darkblue {
-  background-color: #00274D;
-  color: #FAFAFA;
-}
-.theme.darkblue * {
-  color: #FAFAFA;
-}
-.theme.lightgray {
-  background-color: #DFDFDF;
-  color: #454545;
-}
-.theme.lightgray * {
-  color: #454545;
-}
-.theme.white {
-  background-color: #FDFDFD;
-  color: #00274D;
-}
-.theme.white * {
-  color: #00274D;
-}
-
-.font.darkblue {
-  background-color: #00274D;
-}
-.font.white {
-  color: #FDFDFD;
-}
-.font.lightgray {
-  color: #454545;
-}
-
-html {
-  font-family: "Mukta Malar", sans-serif;
-}
-
-/*# sourceMappingURL=all.css.map */
